--- a/특화프로젝트_개발일지.md
+++ b/특화프로젝트_개발일지.md
@@ -7,3 +7,11 @@
 오늘 A606 팀과의 코드리뷰를 시작했다. 아직 제대로 보진 않았는데, 잘하는분이 있는것 같아 배울점이 많을 것  같다.
 
 게임을 제외하고 FE에서 중요한 부분이 그나마 Web3를 이용한 smart contract 호출인데, smart contract 완성까지도 오래 걸릴 것 같고 이용하려면 제대로 알고 써야하기에 solidity에 대한 공부를 시작했다. 프로젝트 초기에 싸피에서 간단하게 알려주는 개념이 조금씩 구체화 되어가는 중이다.
+
+
+
+### 2022/09/21/수
+
+스마트 컨트렉트를 계속 공부하고 내일 있을 테크톡을 위해 공부한 내용을 정리했다.
+
+잘 이해 안되는 부분은 EVM이였는데, 이더리움 네트워크 노드에서 EVM이 작동된다지만 작동시키는 노드는 어떤 기준인지 가까운 순인지 쉬고있는 노드인지, 한 노드만 할당되는지 그런 것도 궁금했다. 그리고 코인의 개념도 아직 잘 안잡히는데 코인이 어떤 주소에 담겨있다는걸 어떻게 표현되는지 어떻게 입증하는지 하는 부분은 그냥 거래 기록이 담긴다는 것을 제외하면 완벽히 이해하진 못했다.
