:memo: 특화개발일지 0922

--- a/특화프로젝트_개발일지.md
+++ b/특화프로젝트_개발일지.md
@@ -15,3 +15,11 @@
 스마트 컨트렉트를 계속 공부하고 내일 있을 테크톡을 위해 공부한 내용을 정리했다.
 
 잘 이해 안되는 부분은 EVM이였는데, 이더리움 네트워크 노드에서 EVM이 작동된다지만 작동시키는 노드는 어떤 기준인지 가까운 순인지 쉬고있는 노드인지, 한 노드만 할당되는지 그런 것도 궁금했다. 그리고 코인의 개념도 아직 잘 안잡히는데 코인이 어떤 주소에 담겨있다는걸 어떻게 표현되는지 어떻게 입증하는지 하는 부분은 그냥 거래 기록이 담긴다는 것을 제외하면 완벽히 이해하진 못했다.
+
+
+
+### 2022/09/22/목
+
+MetaMask를 통해서 회원가입을 해야하면 첫 회원들의 진입장벽이 높다고 생각되어 이메일과 닉네임 만으로 회원가입이 가능하게 변경했다. 비밀번호 찾기는 이전에 석호, 민지누나네 팀이 만들었던 기능이 있어 이메일 보내기로 비밀번호 찾기가 가능하게 되었다. 약간 아쉬운 점은 회원가입시 비밀번호를 입력하는 것이 아니라 가입한 이메일로 들어가 랜덤으로 받은 첫 비밀번호를 찾고 회원가입 수정에서 변경해야 한다는 점 이였다.
+
+회원정보 수정 페이지 구현은 어렵진 않지만 인풋이 많고 여러 필터를 넣어야 해서 최대한 깔끔히 만들어도 먼가 지저분한 느낌이 든다.
