--- a/특화프로젝트_개발일지.md
+++ b/특화프로젝트_개발일지.md
@@ -23,3 +23,13 @@
 MetaMask를 통해서 회원가입을 해야하면 첫 회원들의 진입장벽이 높다고 생각되어 이메일과 닉네임 만으로 회원가입이 가능하게 변경했다. 비밀번호 찾기는 이전에 석호, 민지누나네 팀이 만들었던 기능이 있어 이메일 보내기로 비밀번호 찾기가 가능하게 되었다. 약간 아쉬운 점은 회원가입시 비밀번호를 입력하는 것이 아니라 가입한 이메일로 들어가 랜덤으로 받은 첫 비밀번호를 찾고 회원가입 수정에서 변경해야 한다는 점 이였다.
 
 회원정보 수정 페이지 구현은 어렵진 않지만 인풋이 많고 여러 필터를 넣어야 해서 최대한 깔끔히 만들어도 먼가 지저분한 느낌이 든다.
+
+
+
+### 2022/09/23/금
+
+어제까지 smart contract에 대해 공부했으며, 더 붙잡고 있으면 FE를 완성하지 못할 것 같아 FE로 다시 넘어왔다. 결국 며칠동안 완성한 것은 없지만, 그래도 이더리움 네트워크에 대해 좀 이해가 됐으며, 아예 시간을 날린것 같진 않다.
+
+오늘 Game부분 구현을 위해 sockJS로 websocket을 사용하고 그 위에 stompJS로 sub protocol stomp를 사용했다. 아직 back 부분 구현이 안돼서 제대로 작동하는지 확인하며 작업할 수 없다는 점이 불안하지만, 일단 최대한 완벽하게 구현해놓고 나중에 백과 맞춰봤을때 에러가 나는 부분들을 다시 수정해 나가야 겠다.
+
+1학기 같은반인 경욱이네 공통프로젝트 깃헙을 많이 참고했다. 문제는 typescript를 위해 @stomp/stompjs를 사용하는데 여기서 clinet.send가 아니라 client.publish를 사용한다는 점이다. 다른 프로젝트를 보면 일반적인 stompjs를 사용하기에 send 메소드를 사용하는데 둘의 차이를 아직 정확하게 찾지 못했다.
