--- a/특화프로젝트_개발일지.md
+++ b/특화프로젝트_개발일지.md
@@ -33,3 +33,9 @@ MetaMask를 통해서 회원가입을 해야하면 첫 회원들의 진입장벽
 오늘 Game부분 구현을 위해 sockJS로 websocket을 사용하고 그 위에 stompJS로 sub protocol stomp를 사용했다. 아직 back 부분 구현이 안돼서 제대로 작동하는지 확인하며 작업할 수 없다는 점이 불안하지만, 일단 최대한 완벽하게 구현해놓고 나중에 백과 맞춰봤을때 에러가 나는 부분들을 다시 수정해 나가야 겠다.
 
 1학기 같은반인 경욱이네 공통프로젝트 깃헙을 많이 참고했다. 문제는 typescript를 위해 @stomp/stompjs를 사용하는데 여기서 clinet.send가 아니라 client.publish를 사용한다는 점이다. 다른 프로젝트를 보면 일반적인 stompjs를 사용하기에 send 메소드를 사용하는데 둘의 차이를 아직 정확하게 찾지 못했다.
+
+
+
+### 2022/09/24/토
+
+보경이가 게임부분을 맡아 하다가 그제 내가 넘겨받게 되었는데, 기존에 진행하던 방식으론 제대로 구현할 수 없을것 같아 이 부분을 말한 뒤 상당부분을 지우고 다시했다. 여기서 안타까웠던 점은 CSS인데, 나는 기능을 모두 마치고 그 다음 CSS를 진행하지만, 보경이나 석호에게 들어보니 CSS도 같이 진행하는게 편하다는 답변을 들었다. 물론 개인의 취향이겠지만 만약 CSS를 나중에 했다면 오늘처럼 코드를 새로 다시해야 될 때 덜 아깝지 않을까 생각된다. 이 부분은 누가 맞고 틀리다를 얘기하긴 힘들겠지만 나는 아직까지 기능을 마치고 CSS에 들어가는게 좋은것 같다.
