--- a/특화프로젝트_개발일지.md
+++ b/특화프로젝트_개발일지.md
@@ -39,3 +39,12 @@ MetaMask를 통해서 회원가입을 해야하면 첫 회원들의 진입장벽
 ### 2022/09/24/토
 
 보경이가 게임부분을 맡아 하다가 그제 내가 넘겨받게 되었는데, 기존에 진행하던 방식으론 제대로 구현할 수 없을것 같아 이 부분을 말한 뒤 상당부분을 지우고 다시했다. 여기서 안타까웠던 점은 CSS인데, 나는 기능을 모두 마치고 그 다음 CSS를 진행하지만, 보경이나 석호에게 들어보니 CSS도 같이 진행하는게 편하다는 답변을 들었다. 물론 개인의 취향이겠지만 만약 CSS를 나중에 했다면 오늘처럼 코드를 새로 다시해야 될 때 덜 아깝지 않을까 생각된다. 이 부분은 누가 맞고 틀리다를 얘기하긴 힘들겠지만 나는 아직까지 기능을 마치고 CSS에 들어가는게 좋은것 같다.
+
+
+
+### 2022/09/25/일
+
+BGM을 어떻게 해야 여러 페이지를 이동해도 않끊기고 재생시킬 수 있을까 고민하다 그냥 최상위 컴포넌트로 레이어를 하나 만들었다.
+
+이 레이어의 audio player를 조절 할 수 있는 useBGM을 만들어 노래 종류나 볼륨, 재생을 조절할 수 있도록 했다.
+
