--- a/특화프로젝트_개발일지.md
+++ b/특화프로젝트_개발일지.md
@@ -104,3 +104,14 @@ socket 주소중 일부에는 첫 소켓 연결시 받게되는 userSessionId를
 
 게임 아이템들을 구현했다. 타이머나 점수의 경우 백에서 처리하기 때문에 크게 할 일은 없었고 타이머는 사용 된 아이템 중에서 시간 관련 아이템이 있을 경우 그만큼 빼주는 처리만 해줬다. 다만 카드를 흑백으로 만들거나 카드 일부를 가리는 부분은 카드컴포넌트에서 따로 처리를 해줘야 했다. 흑백은 CSS filter로 쉽게 구현 가능했으며 문제는 카드 일부 가리기였는데, 몇가지 방법이 떠올랐다. 첫번째는 효과능력치에 따라 장애물을 생성해서 카드위 랜덤한 위치에 뿌려놓는 것이였고, 두번째는 카드 일부를 크롭해서 키워 다른부분은 볼 수 없도록 하는 것이며, 세번째는 준비된 이미지를 카드 위에 덮어씌우는 것이였다. 추가로 개발자도구에서 이미지를 확인해도 원본 이미지를 보지 못하도록 새로 이미지를 만들고 이 새로운 이미지를 띄우고 싶었으나, 남은 플젝 기간에서 노력대비 큰 의미가 없는것 같아 구현하지 않았다.
 
+
+
+### 2022/10/5/수
+
+게임방 입장하기를 누르면 비밀번호 확인과정을 거쳐야 하는데, 입장하기를 누르는 순간 웹소켓은 연결되도록 해놨었다. 때문에 한가지 문제가 생기는데, 비밀번호를 몰라 방에 입장을 못해도 방의 게임시작을 방해 할 수 있었다. 비밀번호 확인과정을 거쳐야 소켓을 연결하도록 하여 해결했다.
+
+게임 결과화면을 구현했는데, JS의 sort 메소드를 거의 처음 활용해보는것 같았다. 
+
+게임 결과 상태나 채팅 상태에는 유저들의 프로필 사진이 없는데, 프로필을 띄울 수 있도록 게임방 players 정보에서 프로필을 가져오는 함수를 만들었다.
+
+게임봇을 만들었다. 아이템을 더블클릭해서 사용해야 하는데, 처음 사용자는 더블클릭인지 모를것 같아 이를 게임봇을 통해 알려주고, 아이템 사용시 게임봇을 통해 사용되었음을 알려주었다.
