:memo: 특화개발일지 1006

--- a/특화프로젝트_개발일지.md
+++ b/특화프로젝트_개발일지.md
@@ -115,3 +115,9 @@ socket 주소중 일부에는 첫 소켓 연결시 받게되는 userSessionId를
 게임 결과 상태나 채팅 상태에는 유저들의 프로필 사진이 없는데, 프로필을 띄울 수 있도록 게임방 players 정보에서 프로필을 가져오는 함수를 만들었다.
 
 게임봇을 만들었다. 아이템을 더블클릭해서 사용해야 하는데, 처음 사용자는 더블클릭인지 모를것 같아 이를 게임봇을 통해 알려주고, 아이템 사용시 게임봇을 통해 사용되었음을 알려주었다.
+
+
+
+### 2022/10/6/목
+
+오프라인에서 구현한 게임을 같이 해보고 CSS를 만졌다. 또 발표를 어떤식으로 진행할 지 다 같이 회의시간을 가졌다. 한가지 걱정되는 것은 코치님께 게임을 보여드렸는데, 뭐 하는 게임인지 잘 모르겠으며 뭘 해야 할 지도 잘 모르겠다는 평을 들었다는 것이다. 구현만 돼있고 CSS가 하나도 되어있지 않아 그런 부분도 있겠지만, 우리 메인서비스인 게임이 조금 어렵거나 매력적이지 않은가 하는 생각도 들었다.
