--- a/특화프로젝트_개발일지.md
+++ b/특화프로젝트_개발일지.md
@@ -121,3 +121,15 @@ socket 주소중 일부에는 첫 소켓 연결시 받게되는 userSessionId를
 ### 2022/10/6/목
 
 오프라인에서 구현한 게임을 같이 해보고 CSS를 만졌다. 또 발표를 어떤식으로 진행할 지 다 같이 회의시간을 가졌다. 한가지 걱정되는 것은 코치님께 게임을 보여드렸는데, 뭐 하는 게임인지 잘 모르겠으며 뭘 해야 할 지도 잘 모르겠다는 평을 들었다는 것이다. 구현만 돼있고 CSS가 하나도 되어있지 않아 그런 부분도 있겠지만, 우리 메인서비스인 게임이 조금 어렵거나 매력적이지 않은가 하는 생각도 들었다.
+
+
+
+### 2022/10/7/금
+
+최종 발표가 있는 날이며 모두 같이 밤을 셌다. 이전 공통때는 발표 1,2주 전에 기능구현은 모두 끝난 상태로 QA나 스타일링을 하며 완성도를 높였지만, 이번엔 진도가 느려 당일날까지 발표 준비보단 코드를 계속 만지게 되었다. 테스트용이 아닌 배포용 DB를 새로 설정하며 게임 시작이 안되는 이슈가 있었는데, 백은 달라진게 없다고 하여 프런트 잘못인가 싶어 코드를 뒤져보았다. 오류원인을 찾지 못해 이전에 게임이 돌아가던 버전으로 테스트를 해봤는데, 마찬가지로 게임 시작이 안돼었고, 백에게 전달 해주니 디비 자료가 없어지며 백에서 오류가나는 에러였다고 한다.
+
+이전 며칠과 특히 오늘 나는 CSS를 정말 못한다는 생각이 들었다. 차라리 부트스트랩을 가져와 쓰는게 훨씬 빠르고 깔끔할 것 같았다.
+
+QA나 CSS를 적당히 진행하고 발표준비에 더 힘썼으면 어땠을까 싶다. 게임과 아이템 사용도 제대로 작동하고 smart contract를 통한 NFT민팅이나 거래등록 및 구매도 제대로 되고, 이 외에도 랭킹이나 투표 기능도 있었기에 기능의 다향성 면에선 다른조에 밀리지 않다고 생각되며, 발표를 논리적이고 잘 꾸며서 했다면 충분히 순위권에 들 수 있었다고 생각된다.
+
+이번 프로젝트는 여러모로 아쉬웠다. 기간이 짧기도 했지만, 애초에 접근부터 잘못 했던것 같다. Typescript를 배우고 emotion을 사용해 css를 만드는게 목표였으나, 목표와 다르게 촉박한 시간안에 구현하는것에만 몰두하고 배우는 시간은 적었던것 같다. Typescript도 제대로 사용 못하고 배우지 못했으며 알고 있던 부분만 기계적으로 반복하고 에러가 발생하면 고치고 이런 작업의 반복이였던것 같다. 지난 프로젝트에서 처름 React를 배우고 사용했기 때문에 이번에도 할 수 있을 줄 알았는데 프로젝트 인원도 적었고 생각보다 쉽지 않았다. 다음 프로젝트는 프로젝트 퀄리티도 중요하겠지만 배우는것도 많았으면 좋겠다. 이것으로 특화 프로젝트 개발일지를 마친다.
